--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zoooom",
+  "name": "yoom",
   "version": "1.0.0",
   "description": "Zoom Clone using WebRTC and Websockets",
   "author": "",
@@ -15,6 +15,8 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jade": "^1.11.0",
+    "pug": "^3.0.2"
   }
 }
