--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "jade": "^1.11.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.3.0"
   }
 }
